--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="sidebar">
             <h3>Menu</h3>
             <ul class="navigation">
-                <li><a href="dashboard.html"><i class="fas fa-home"></i> Dashboard</a></li>
+                <li><a href="index.html"><i class="fas fa-home"></i> Dashboard</a></li>
                 <li><a href="karyawan.html"><i class="fas fa-users"></i> Karyawan</a></li>
                 <li><a href="request.html"><i class="fas fa-file-alt"></i> Request</a></li>
                 <li><a href="result.html"><i class="fas fa-chart-bar"></i> Result</a></li>
@@ -125,7 +125,7 @@
         <div class="main-content">
             <div class="icon-links">
                 <div class="icon-link">
-                    <a href="dashboard.html">
+                    <a href="index.html">
                         <img src="dashboard_icon.png" alt="Dashboard">
                         <h2>Dashboard</h2>
                     </a>
