--- a/index.html
+++ b/index.html
@@ -103,6 +103,43 @@
         .logout-btn:hover {
             background-color: #c0392b;
         }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+        table, th, td {
+            border: 1px solid #ddd;
+        }
+        th, td {
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #2c3e50;
+            color: white;
+        }
+        form {
+            margin-top: 20px;
+        }
+        form label {
+            display: block;
+            margin: 10px 0 5px;
+        }
+        form input, form button {
+            padding: 10px;
+            width: 100%;
+            box-sizing: border-box;
+        }
+        form button {
+            background-color: #2c3e50;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+        form button:hover {
+            background-color: #34495e;
+        }
     </style>
 </head>
 <body>
@@ -123,36 +160,70 @@
         </div>
 
         <div class="main-content">
-            <div class="icon-links">
-                <div class="icon-link">
-                    <a href="index.html">
-                        <img src="dashboard_icon.png" alt="Dashboard">
-                        <h2>Dashboard</h2>
-                    </a>
-                </div>
-                <div class="icon-link">
-                    <a href="karyawan.html">
-                        <img src="karyawan_icon.png" alt="Karyawan">
-                        <h2>Karyawan</h2>
-                    </a>
-                </div>
-                <div class="icon-link">
-                    <a href="request.html">
-                        <img src="request_icon.png" alt="Request">
-                        <h2>Request</h2>
-                    </a>
-                </div>
-                <div class="icon-link">
-                    <a href="result.html">
-                        <img src="result_icon.png" alt="Result">
-                        <h2>Result</h2>
-                    </a>
-                </div>
-            </div>
+            <h2>Tambah Data Karyawan</h2>
+            <form id="addForm">
+                <label for="name">Nama:</label>
+                <input type="text" id="name" name="name" required>
+                <label for="position">Posisi:</label>
+                <input type="text" id="position" name="position" required>
+                <button type="submit">Add</button>
+            </form>
+
+            <h2>Data Karyawan</h2>
+            <table id="dataTable">
+                <thead>
+                    <tr>
+                        <th>Nama</th>
+                        <th>Posisi</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Rows will be added here dynamically -->
+                </tbody>
+            </table>
         </div>
     </div>
 
     <script>
+        document.getElementById('addForm').addEventListener('submit', function(event) {
+            event.preventDefault(); // Mencegah form dari submit default
+            let name = document.getElementById('name').value;
+            let position = document.getElementById('position').value;
+
+            let table = document.getElementById('dataTable').getElementsByTagName('tbody')[0];
+            let newRow = table.insertRow();
+            let cell1 = newRow.insertCell(0);
+            let cell2 = newRow.insertCell(1);
+            cell1.textContent = name;
+            cell2.textContent = position;
+
+            saveToLocalStorage(name, position);
+
+            document.getElementById('addForm').reset(); // Reset form setelah menambah data
+        });
+
+        function saveToLocalStorage(name, position) {
+            let data = JSON.parse(localStorage.getItem('karyawanData')) || [];
+            data.push({ name: name, position: position });
+            localStorage.setItem('karyawanData', JSON.stringify(data));
+        }
+
+        function loadFromLocalStorage() {
+            let data = JSON.parse(localStorage.getItem('karyawanData')) || [];
+            let table = document.getElementById('dataTable').getElementsByTagName('tbody')[0];
+            data.forEach(item => {
+                let newRow = table.insertRow();
+                let cell1 = newRow.insertCell(0);
+                let cell2 = newRow.insertCell(1);
+                cell1.textContent = item.name;
+                cell2.textContent = item.position;
+            });
+        }
+
+        window.onload = function() {
+            loadFromLocalStorage();
+        }
+
         function logout() {
             // Logic for logging out (e.g., clearing session storage, redirecting to login page)
             window.location.href = 'login.html';
