--- a/karyawan.html
+++ b/karyawan.html
@@ -5,7 +5,30 @@
     <title>Karyawan Management System</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
-        /* Styles tetap sama seperti sebelumnya */
+        body {font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #f0f2f5; margin: 0; padding: 0; display: flex;}
+        .top-bar {position: fixed; top: 0; left: 0; right: 0; background-color: #2c3e50; color: white; padding: 30px 10px; display: flex; justify-content: center; align-items: center; z-index: 1000; height: 60px;}
+        .top-bar h1 {margin: 0; font-size: 32px; color: white;}
+        .auth-buttons {position: absolute; right: 10px;}
+        .auth-buttons button {background-color: #3498db; color: white; border: none; border-radius: 4px; padding: 5px 10px; cursor: pointer;}
+        .sidebar {width: 240px; background-color: #2c3e50; color: white; padding: 20px; height: calc(100vh - 120px); position: fixed; top: 120px; left: 0; overflow-y: auto;}
+        .sidebar a {color: white; text-decoration: none; display: block; padding: 10px 0;}
+        .sidebar h2 {font-size: 28px; color: white; margin-bottom: 20px;}
+        .main-content {flex: 1; padding: 140px 20px 20px 290px; margin-left: 0;}
+        form {background-color: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);}
+        input[type="text"], select, textarea, input[type="file"] {width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ddd; border-radius: 4px;}
+        input[type="submit"], .print-button, .toggle-button {background-color: #3498db; color: white; padding: 10px 20px; border: none; border-radius: 4px; cursor: pointer; display: inline-block; margin-top: 10px; margin-right: 10px;}
+        table {width: 100%; border-collapse: collapse; margin-top: 20px; background-color: white; box-shadow: 0 0 10px rgba(0,0,0,0.1);}
+        th, td {text-align: left; padding: 12px; border-bottom: 1px solid #ddd;}
+        th {background-color: #3498db; color: white;}
+        .action-buttons button {margin: 2px; padding: 5px 10px; border: none; border-radius: 4px; cursor: pointer;}
+        .save-button {background-color: #2ecc71; color: white;}
+        .undo-button {background-color: #f39c12; color: white;}
+        .delete-button {background-color: #c0392b; color: white;}
+        .kebutuhan-options {display: flex; gap: 10px; margin: 10px 0;}
+        .kebutuhan-options label {display: flex; align-items: center; gap: 5px;}
+        #searchInput, #sortInput {width: 200px; display: inline-block; margin-right: 10px;}
+        .controls {margin-bottom: 20px;}
+        @media print {.action-buttons, td:nth-last-child(1), td:nth-last-child(2), th:nth-last-child(1), th:nth-last-child(2), .print-button, .toggle-button, .top-bar, .sidebar {display: none !important;}}
     </style>
 </head>
 <body>
@@ -26,32 +49,58 @@
     <div class="main-content">
         <div id="employeeForm" style="display: none;">
             <form id="addEmployeeForm">
-                <select id="nama" required>
-                    <option value="">Pilih Nama</option>
+                <select id="Nama" required>
                     <option value="INDIRA RULLY PRICILIA">INDIRA RULLY PRICILIA</option>
                     <option value="PUTUT ADI PRAKOSO">PUTUT ADI PRAKOSO</option>
-                    <!-- ... tambahkan opsi nama lainnya ... -->
+                    <option value="RIJKI HIDAYAT">RIJKI HIDAYAT</option>
+                    <option value="FERRI RIZALDI">FERRI RIZALDI</option>
+                    <option value="TRIARDHY FIKRI NUGRAHA">TRIARDHY FIKRI NUGRAHA</option>
+                    <option value="AFIF MUSYAFA">AFIF MUSYAFA</option>
+                    <option value="ASMIL JANUAR">ASMIL JANUAR</option>
+                    <option value="KHARLIN AHMAD HANAFI SIREGAR">KHARLIN AHMAD HANAFI SIREGAR</option>
+                    <option value="ARYA PRATAMA PUTRA">ARYA PRATAMA PUTRA</option>
+                    <option value="DEWI RABIATUL ZAHRO">DEWI RABIATUL ZAHRO</option>
+                    <option value="SOLICHUN">SOLICHUN</option>
+                    <option value="RANGGA SYAPUTRA">RANGGA SYAPUTRA</option>
+                    <option value="NOVIA ANGGRAINI">NOVIA ANGGRAINI</option>
+                    <option value="DEBORA HIZKHIA PARDEDE">DEBORA HIZKHIA PARDEDE</option>
                 </select>
                 <select id="npk" required>
-                    <option value="">Pilih NPK</option>
                     <option value="12355">12355</option>
                     <option value="12364">12364</option>
-                    <!-- ... tambahkan opsi NPK lainnya ... -->
+                    <option value="12369">12369</option>
+                    <option value="12360">12360</option>
+                    <option value="12356">12356</option>
+                    <option value="12399">12399</option>
+                    <option value="12394">12394</option>
+                    <option value="12387">12387</option>
+                    <option value="12381">12381</option>
+                    <option value="12376">12376</option>
+                    <option value="12372">12372</option>
+                    <option value="12368">12368</option>
+                    <option value="12363">12363</option>
                 </select>
                 <div class="kebutuhan-options">
                     <label><input type="radio" name="kebutuhan" value="Peminjaman Aset" required> Peminjaman Aset</label>
                     <label><input type="radio" name="kebutuhan" value="Permintaan Aset" required> Permintaan Aset</label>
                 </div>
                 <select id="item" required>
-                    <option value="">Pilih Item</option>
                     <option value="Speaker">Speaker</option>
                     <option value="Invest">Invest</option>
                     <option value="Proyektor">Proyektor</option>
                 </select>
                 <select id="department" required>
-                    <option value="">Pilih Department</option>
                     <option value="Engineering">Engineering</option>
-                    <!-- ... tambahkan opsi department lainnya ... -->
+                    <option value="QC">QC</option>
+                    <option value="Produksi">Produksi</option>
+                    <option value="General Affair">General Affair</option>
+                    <option value="HRD">HRD</option>
+                    <option value="Accounting">Accounting</option>
+                    <option value="Purchasing">Purchasing</option>
+                    <option value="PPIC">PPIC</option>
+                    <option value="Maintenance">Maintenance</option>
+                    <option value="IT">IT</option>
+                    <option value="Finance">Finance</option>
                 </select>
                 <textarea id="keperluan" placeholder="Keperluan" required></textarea>
                 <input type="file" id="foto" accept="image/*" required>
@@ -76,6 +125,7 @@
         <table id="employeeTable">
             <thead>
                 <tr>
+                    <th>ID</th>
                     <th>Nama</th>
                     <th>NPK</th>
                     <th>Kebutuhan</th>
@@ -91,11 +141,12 @@
         </table>
     </div>
     <script>
-        let employeeData = JSON.parse(localStorage.getItem('employeeData')) || [{nama: "John Doe", npk: "12345", kebutuhan: "Peminjaman Aset", item: "Proyektor", department: "Engineering", keperluan: "Presentasi", duration: "2", fotoData: "https://via.placeholder.com/50"}];
+        let employeeData = JSON.parse(localStorage.getItem('employeeData')) || [];
+        let currentId = parseInt(localStorage.getItem('currentId')) || 1;
 
         function toggleForm() {
             const form = document.getElementById('employeeForm');
-            form.style.display = form.style.display === 'block' ? 'none' : 'block';
+            form.style.display = form.style.display === 'none' ? 'block' : 'none';
         }
 
         document.getElementById('addEmployeeForm').addEventListener('submit', function(event) {
@@ -104,7 +155,7 @@
         });
 
         function addEmployee() {
-            const nama = document.getElementById('nama').value;
+            const nama = document.getElementById('Nama').value;
             const npk = document.getElementById('npk').value;
             const kebutuhan = document.querySelector('input[name="kebutuhan"]:checked').value;
             const item = document.getElementById('item').value;
@@ -113,22 +164,32 @@
             const duration = document.getElementById('duration').value;
             const fotoFile = document.getElementById('foto').files[0];
 
-            if (!nama || !npk || !kebutuhan || !item || !department || !keperluan || !duration || !fotoFile) {
-                alert('Mohon isi semua field');
-                return;
-            }
-
             const reader = new FileReader();
             reader.onloadend = function() {
-                const newEmployee = {nama, npk, kebutuhan, item, department, keperluan, duration, fotoData: reader.result};
+                const newEmployee = {
+                    id: currentId++,
+                    nama,
+                    npk,
+                    kebutuhan,
+                    item,
+                    department,
+                    keperluan,
+                    duration,
+                    fotoData: reader.result
+                };
                 employeeData.push(newEmployee);
                 localStorage.setItem('employeeData', JSON.stringify(employeeData));
+                localStorage.setItem('currentId', currentId.toString());
                 renderTable();
                 document.getElementById('addEmployeeForm').reset();
                 toggleForm();
             };
 
-            reader.readAsDataURL(fotoFile);
+            if (fotoFile) {
+                reader.readAsDataURL(fotoFile);
+            } else {
+                alert('Mohon pilih file foto');
+            }
         }
 
         function renderTable() {
@@ -137,6 +198,7 @@
             employeeData.forEach((employee, index) => {
                 const row = tableBody.insertRow();
                 row.innerHTML = `
+                    <td>${employee.id}</td>
                     <td>${employee.nama}</td>
                     <td>${employee.npk}</td>
                     <td>${employee.kebutuhan}</td>
@@ -156,7 +218,7 @@
 
         function editRow(button) {
             const row = button.parentNode.parentNode;
-            for (let i = 0; i < row.cells.length - 2; i++) {
+            for (let i = 1; i < row.cells.length - 2; i++) {
                 const cell = row.cells[i];
                 const text = cell.textContent;
                 cell.innerHTML = `<input type="text" value="${text}">`;
@@ -167,8 +229,8 @@
 
         function saveRow(button) {
             const row = button.parentNode.parentNode;
-            const index = row.rowIndex - 1;
-            for (let i = 0; i < row.cells.length - 2; i++) {
+            const index = employeeData.findIndex(emp => emp.id === parseInt(row.cells[0].textContent));
+            for (let i = 1; i < row.cells.length - 2; i++) {
                 const cell = row.cells[i];
                 const input = cell.querySelector('input');
                 cell.textContent = input.value;
@@ -206,7 +268,7 @@
             }
         }
 
-        function sortTable() {
+       function sortTable() {
             const select = document.getElementById('sortInput');
             const column = select.value;
             employeeData.sort((a, b) => (a[column] > b[column]) ? 1 : -1);
@@ -224,13 +286,18 @@
 
         window.onload = function() {
             renderTable();
-            const durationSelect = document.getElementById('duration');
-            for (let i = 1; i <= 5; i++) {
-                const option = document.createElement('option');
-                option.value = i;
-                option.textContent = `${i} hari`;
-                durationSelect.appendChild(option);
-            }
+            document.getElementById('duration').innerHTML = `
+                <option value="21">21 hari</option>
+                <option value="22">22 hari</option>
+                <option value="23">23 hari</option>
+                <option value="24">24 hari</option>
+                <option value="25">25 hari</option>
+                <option value="26">26 hari</option>
+                <option value="27">27 hari</option>
+                <option value="28">28 hari</option>
+                <option value="29">29 hari</option>
+                <option value="30">30 hari</option>
+            `;
         };
     </script>
 </body>
