--- a/request.html
+++ b/request.html
@@ -244,11 +244,17 @@
                 <label for="peminjam">Peminjam</label>
                 <input type="text" name="peminjam" id="peminjam">
                 <label for="item">Item</label>
-                <select name="item" id="item">
+                <select id="item" required>
+                    <option value="Laptop">Laptop</option>
+                    <option value="Chair">Chair</option>
+                    <option value="Printer">Printer</option>
+                    <option value="Stapler">Stapler</option>
+                    <option value="Whiteboard">Whiteboard</option>
+                    <option value="Desk Lamp">Desk lamp</option>
+                    <option value="Cabinet">Cabinet</option>
+                    <option value="Notebook">Notebook</option>
+                    <option value="Monitor">Monitor</option>
                     <option value="Speaker">Speaker</option>
-                    <option value="Invest">Invest</option>
-                    <option value="Proyektor">Proyektor</option>
-                </select>
                 <input type="submit" value="Submit Request">
             </form>
             <div style="display: flex; align-items: center;">
