--- a/karyawan.html
+++ b/karyawan.html
@@ -125,6 +125,8 @@
                 <option value="npk">NPK</option>
                 <option value="item">Item</option>
                 <option value="department">Department</option>
+                <option value="keperluan">keperluan</option>
+                <option value="lama peminjaman">lama peminjaman</option>
             </select>
             <button class="print-button" onclick="printTable()">Print</button>
             <button class="toggle-button" onclick="toggleForm()">Add</button>
