--- a/result.html
+++ b/result.html
@@ -84,6 +84,22 @@
 
         <div class="main-content">
             <form id="resultForm">
+                <select id="Nama" required>
+                    <option value="INDIRA RULLY PRICILIA">INDIRA RULLY PRICILIA</option>
+                    <option value="PUTUT ADI PRAKOSO">PUTUT ADI PRAKOSO</option>
+                    <option value="RIJKI HIDAYAT">RIJKI HIDAYAT</option>
+                    <option value="FERRI RIZALDI">FERRI RIZALDI</option>
+                    <option value="TRIARDHY FIKRI NUGRAHA">TRIARDHY FIKRI NUGRAHA</option>
+                    <option value="AFIF MUSYAFA">AFIF MUSYAFA</option>
+                    <option value="ASMIL JANUAR">ASMIL JANUAR</option>
+                    <option value="KHARLIN AHMAD HANAFI SIREGAR">KHARLIN AHMAD HANAFI SIREGAR</option>
+                    <option value="ARYA PRATAMA PUTRA">ARYA PRATAMA PUTRA</option>
+                    <option value="DEWI RABIATUL ZAHRO">DEWI RABIATUL ZAHRO</option>
+                    <option value="SOLICHUN">SOLICHUN</option>
+                    <option value="RANGGA SYAPUTRA">RANGGA SYAPUTRA</option>
+                    <option value="NOVIA ANGGRAINI">NOVIA ANGGRAINI</option>
+                    <option value="DEBORA HIZKHIA PARDEDE">DEBORA HIZKHIA PARDEDE</option>
+                </select>
                 <label for="nomor_result">Nomor Result</label>
                 <div id="nomor_result" class="static-text">RES/TI/2024/5982</div>
 
