--- a/request.html
+++ b/request.html
@@ -239,10 +239,38 @@
                     <option value="HRD">HRD</option>
                     <option value="Purchasing">Purchasing</option>
                 </select>
-                <label for="nama">Nama</label>
-                <input type="text" name="nama" id="nama">
-                <label for="peminjam">Peminjam</label>
-                <input type="text" name="peminjam" id="peminjam">
+                <select id="Nama" required>
+                    <option value="INDIRA RULLY PRICILIA">INDIRA RULLY PRICILIA</option>
+                    <option value="PUTUT ADI PRAKOSO">PUTUT ADI PRAKOSO</option>
+                    <option value="RIJKI HIDAYAT">RIJKI HIDAYAT</option>
+                    <option value="FERRI RIZALDI">FERRI RIZALDI</option>
+                    <option value="TRIARDHY FIKRI NUGRAHA">TRIARDHY FIKRI NUGRAHA</option>
+                    <option value="MOSSES ARA'AL DE SELA">MOSSES ARA'AL DE SELA</option>
+                    <option value="JAELANI">JAELANI</option>
+                    <option value="JIHAN TSHIVANA">JIHAN TSHIVANA</option>
+                    <option value="OCTAVIANA">OCTAVIANA</option>
+                    <option value="RIZQI SAPUTRI">RIZQI SAPUTRI</option>
+                    <option value="ARYA PRATAMA PUTRA">ARYA PRATAMA PUTRA</option>
+                    <option value="DEWI RABIATUL ZAHRO">DEWI RABIATUL ZAHRO</option>
+                    <option value="NOVIA ANGGRAINI">NOVIA ANGGRAINI</option>
+                    <option value="DEBORA HIZKHIA PARDEDE">DEBORA HIZKHIA PARDEDE</option>
+                </select>
+                <select id="peminjam" required>
+                    <option value="INDIRA RULLY PRICILIA">INDIRA RULLY PRICILIA</option>
+                    <option value="PUTUT ADI PRAKOSO">PUTUT ADI PRAKOSO</option>
+                    <option value="RIJKI HIDAYAT">RIJKI HIDAYAT</option>
+                    <option value="FERRI RIZALDI">FERRI RIZALDI</option>
+                    <option value="TRIARDHY FIKRI NUGRAHA">TRIARDHY FIKRI NUGRAHA</option>
+                    <option value="MOSSES ARA'AL DE SELA">MOSSES ARA'AL DE SELA</option>
+                    <option value="JAELANI">JAELANI</option>
+                    <option value="JIHAN TSHIVANA">JIHAN TSHIVANA</option>
+                    <option value="OCTAVIANA">OCTAVIANA</option>
+                    <option value="RIZQI SAPUTRI">RIZQI SAPUTRI</option>
+                    <option value="ARYA PRATAMA PUTRA">ARYA PRATAMA PUTRA</option>
+                    <option value="DEWI RABIATUL ZAHRO">DEWI RABIATUL ZAHRO</option>
+                    <option value="NOVIA ANGGRAINI">NOVIA ANGGRAINI</option>
+                    <option value="DEBORA HIZKHIA PARDEDE">DEBORA HIZKHIA PARDEDE</option>
+                </select>
                 <label for="item">Item</label>
                 <select id="item" required>
                     <option value="Laptop">Laptop</option>
