--- a/karyawan.html
+++ b/karyawan.html
@@ -80,6 +80,10 @@
                     <option value="12372">12372</option>
                     <option value="12368">12368</option>
                     <option value="12363">12363</option>
+                    <option value="12377">12377</option>
+                    <option value="12374">12374</option>
+                    <option value="12370">12370</option>
+                    <option value="12391">12391</option>
                 </select>
                 <div class="kebutuhan-options">
                     <label><input type="radio" name="kebutuhan" value="Peminjaman Aset" required> Peminjaman Aset</label>
