--- a/result.html
+++ b/result.html
@@ -60,8 +60,20 @@
                 <div id="nomor_result" class="static-text">RES/TI/2024/5982</div>
                 <label for="Nama">Nama</label>
                 <select id="Nama" required>
-                    <option value="INDIRA RULLY PRICILIA">INDIRA RULLY PRICILIA</option>
-                    <!-- other options -->
+                     <option value="INDIRA RULLY PRICILIA">INDIRA RULLY PRICILIA</option>
+                    <option value="PUTUT ADI PRAKOSO">PUTUT ADI PRAKOSO</option>
+                    <option value="RIJKI HIDAYAT">RIJKI HIDAYAT</option>
+                    <option value="FERRI RIZALDI">FERRI RIZALDI</option>
+                    <option value="TRIARDHY FIKRI NUGRAHA">TRIARDHY FIKRI NUGRAHA</option>
+                    <option value="MOSSES ARA'AL DE SELA">MOSSES ARA'AL DE SELA</option>
+                    <option value="JAELANI">JAELANI</option>
+                    <option value="JIHAN TSHIVANA">JIHAN TSHIVANA</option>
+                    <option value="OCTAVIANA">OCTAVIANA</option>
+                    <option value="RIZQI SAPUTRI">RIZQI SAPUTRI</option>
+                    <option value="ARYA PRATAMA PUTRA">ARYA PRATAMA PUTRA</option>
+                    <option value="DEWI RABIATUL ZAHRO">DEWI RABIATUL ZAHRO</option>
+                    <option value="NOVIA ANGGRAINI">NOVIA ANGGRAINI</option>
+                    <option value="DEBORA HIZKHIA PARDEDE">DEBORA HIZKHIA PARDEDE</option>
                 </select>
                 <label for="quantity">Quantity <span class="required-asterisk">*</span></label>
                 <input type="number" id="quantity" required min="1">
@@ -72,7 +84,8 @@
                 <label for="status">Status <span class="required-asterisk">*</span></label>
                 <select id="status" required>
                     <option value="Disetujui">Disetujui</option>
-                    <!-- other options -->
+                     <option value="Belum disetujui">Belum disetujui</option>
+                    <option value="Diasetkan">Diasetkan</option>
                 </select>
                 <label for="note">Note</label>
                 <textarea id="note"></textarea>
