--- a/karyawan.html
+++ b/karyawan.html
@@ -122,6 +122,7 @@
                 <br>
                 <input type="submit" value="Tambah">
             </form>
+            <div class="success-alert" id="successAlert">Data successfully submitted!</div>
         </div>
         <div class="controls">
             <input type="text" id="searchInput" onkeyup="searchTable()" placeholder="Cari berdasarkan nama..">
