--- a/karyawan.html
+++ b/karyawan.html
@@ -5,7 +5,31 @@
     <title>Karyawan Management System</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
-        /* ... (CSS tetap sama) ... */
+        body {font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #f0f2f5; margin: 0; padding: 0; display: flex;}
+        .top-bar {position: fixed; top: 0; left: 0; right: 0; background-color: #2c3e50; color: white; padding: 30px 10px; display: flex; justify-content: center; align-items: center; z-index: 1000; height: 60px;}
+        .top-bar h1 {margin: 0; font-size: 32px; color: white;}
+        .auth-buttons {position: absolute; right: 10px;}
+        .auth-buttons button {background-color: #3498db; color: white; border: none; border-radius: 4px; padding: 5px 10px; cursor: pointer;}
+        .sidebar {width: 240px; background-color: #2c3e50; color: white; padding: 20px; height: calc(100vh - 120px); position: fixed; top: 120px; left: 0; overflow-y: auto;}
+        .sidebar a {color: white; text-decoration: none; display: block; padding: 10px 0;}
+        .sidebar h2 {font-size: 28px; color: white; margin-bottom: 20px;}
+        .main-content {flex: 1; padding: 140px 20px 20px 290px; margin-left: 0;}
+        form {background-color: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);}
+        input[type="text"], select, textarea, input[type="file"] {width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ddd; border-radius: 4px;}
+        input[type="submit"], .print-button, .toggle-button {background-color: #3498db; color: white; padding: 10px 20px; border: none; border-radius: 4px; cursor: pointer; display: inline-block; margin-top: 10px; margin-right: 10px;}
+        table {width: 100%; border-collapse: collapse; margin-top: 20px; background-color: white; box-shadow: 0 0 10px rgba(0,0,0,0.1);}
+        th, td {text-align: left; padding: 12px; border-bottom: 1px solid #ddd;}
+        th {background-color: #3498db; color: white;}
+        .action-buttons button {margin: 2px; padding: 5px 10px; border: none; border-radius: 4px; cursor: pointer;}
+        .save-button {background-color: #2ecc71; color: white;}
+        .undo-button {background-color: #f39c12; color: white;}
+        .delete-button {background-color: #c0392b; color: white;}
+        .kebutuhan-options {display: flex; gap: 10px; margin: 10px 0;}
+        .kebutuhan-options label {display: flex; align-items: center; gap: 5px;}
+        #searchInput, #sortInput {width: 200px; display: inline-block; margin-right: 10px;}
+        .controls {margin-bottom: 20px;}
+        @media print {.action-buttons, td:nth-last-child(1), td:nth-last-child(2), th:nth-last-child(1), th:nth-last-child(2), .print-button, .toggle-button, .top-bar, .sidebar {display: none !important;}}
+        .success-alert {display: none; background-color: #2ecc71; color: white; padding: 10px; border-radius: 4px; margin-top: 10px;}
     </style>
 </head>
 <body>
