--- a/karyawan.html
+++ b/karyawan.html
@@ -39,7 +39,7 @@
         .kebutuhan-options label {display: flex; align-items: center; gap: 5px;}
         #searchInput, #sortInput {width: 200px; display: inline-block; margin-right: 10px;}
         .logout-btn {
-            background-color: #99564f;
+            background-color: #f28b82;
             color: white;
             padding: 10px 20px;
             border: none;
@@ -63,7 +63,6 @@
         <h1>Karyawan</h1>
         <div class="auth-buttons">
             <button onclick="window.location.href='login.html'"><i class="fas fa-user"></i>Login</button>
-            <button class="logout-btn" onclick="logout()"><i class="fas fa-sign-out-alt"></i> Logout</button>
         </div>
     </div>
     <div class="sidebar">
@@ -72,6 +71,7 @@
         <a href="karyawan.html">Karyawan</a>
         <a href="request.html">Request</a>
         <a href="result.html">Result</a>
+        <button class="logout-btn" onclick="logout()"><i class="fas fa-sign-out-alt"></i> Logout</button>
     </div>
     <div class="main-content">
         <div id="employeeForm" style="display: none;">
@@ -182,13 +182,6 @@
         </table>
     </div>
     <button type="button" id="addNewNameBtn">Add New Name</button>
-    <div id="addNameModal" style="display:none; position: fixed; z-index: 1; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgba(0,0,0,0.4);">
-        <div style="background-color: #fefefe; margin: 15% auto; padding: 20px; border: 1px solid #888; width: 80%;">
-            <h2>Add New Name</h2>
-            <input type="text" id="newNameInput" placeholder="Enter new name">
-            <button id="saveNewNameBtn">Save</button>
-            <button id="closeModalBtn">Close</button>
-        </div>
     </div>
     <script>
         let employeeData = JSON.parse(localStorage.getItem('employeeData')) || [];
