--- a/request.html
+++ b/request.html
@@ -75,7 +75,7 @@
             padding: 10px 0;
         }
         .logout-btn {
-            background-color: #e74c3c;
+            background-color: #f28b82;
             color: white;
             border: none;
             padding: 10px;
